Define requirements.txt and update dockerfile to reflect dependencies in build

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /app
 
 COPY . .
 
-EXPOSE 3000
+RUN pip install -r requirements.txt
 
-CMD ["gunicorn", "-b", "0.0.0.0:3000", "app:app"]
+RUN python -m spacy download en
+
+EXPOSE 3000
