--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -9,3 +9,5 @@ RUN pip install -r requirements.txt
 RUN python -m spacy download en
 
 EXPOSE 3000
+
+CMD ["gunicorn", "-b", "0.0.0.0:3000", "app:app"]
