--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,4 +1,6 @@
-FROM python:3.7
+FROM python:3.6
+
+ADD . /app
 
 WORKDIR /app
 
@@ -6,8 +8,8 @@ COPY . .
 
 RUN pip install -r requirements.txt
 
-RUN python -m spacy download en
+# RUN python -m spacy download en
 
-EXPOSE 3000
+EXPOSE 5000
 
-CMD ["gunicorn", "-b", "0.0.0.0:3000", "app:app"]
+CMD ["gunicorn", "-b", "0.0.0.0:5000", "app:app"]
