--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -25,7 +25,7 @@ MarkupSafe==1.1.1
 murmurhash==1.0.2
 numpy==1.18.2
 opt-einsum==3.2.0
-pandas==1.0.3
+pandas==0.25.1
 plac==1.1.3
 preshed==3.0.2
 protobuf==3.11.3
@@ -51,3 +51,4 @@ wasabi==0.6.0
 Werkzeug==1.0.0
 wrapt==1.12.1
 zipp==3.1.0
+gunicorn==19.9.0
