--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - "8050:8050"
     environment:
       - ENVIRONMENT=prod
-      - API_URL=http://api:3000
+      - API_URL=http://api:5000/api
     depends_on:
       - api
     restart: always
