Update docker-compose config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - POSTGRES_PASSWORD=password
     volumes:
       - ~/pgdata:/var/lib/postgresql/data
+    # ports:
+    #   - "5432:5432"
     restart: always
   api:
     build:
